--- a/index.html
+++ b/index.html
@@ -177,9 +177,6 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
-          </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
@@ -242,7 +239,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Web Security</h4>
 
                 <p class="service-item-text">
                   The most modern and high-quality design made at a professional level.
