--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <h1 class="name" title="Elmar Babayev">Elmar Babayev</h1>
 
           <p class="title">Ethical Hacker</p>
+          <p class="title">Public Speaker</p> 
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -140,7 +141,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
