--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/mrelmarbabayev/" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
+            <a href="" class="social-link">
+              <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
 
@@ -171,7 +171,11 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
-
+           
+          
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Media</button>
+          </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
