--- a/index.html
+++ b/index.html
@@ -1158,6 +1158,8 @@
 
               <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
             </div>
+            <input type="number" name="number" class="form-input" placeholder="Phone" required data-form-input>
+            </div>
 
             <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
 
