--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
             </li>
 
             <li class="blog-post-item">
-              <a href="#">
+              <a href="https://medium.com/@mrelmarbabayev">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-6.jpg" alt="Design digest #79" loading="lazy">
