--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
             </a>
           </li>
 
+          <li class="social-item">
+            <a href="https://medium.com/@mrelmarbabayev" class="social-link">
+              <ion-icon name="logo-medium"></ion-icon>
+            </a>
+          </li>
         </ul>
 
       </div>
