--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
+            I'm Ethical Hacker Baku, Azerbaijan, working in web security
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
