--- a/index.html
+++ b/index.html
@@ -127,7 +127,12 @@
         <div class="separator"></div>
 
         <ul class="social-list">
-
+        
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon name="logo-whatsapp"></ion-icon>
+            </a>
+          </li>
          <li class="social-item">
             <a href="#" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
