--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <ul class="social-list">
         
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://wa.link/tzx5fk" class="social-link">
               <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
           </li>
