--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <h1 class="name" title="Elmar Babayev">Elmar Babayev</h1>
 
           <p class="title">Ethical Hacker</p>
+           <p class="title">Instructor</p>
           <p class="title">Public Speaker</p> 
         </div>
 
