--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         <section class="about-text">
           <p>
-            I'm Ethical Hacker Baku, Azerbaijan, working in web security
+            I'm Ethical Hacker Baku, Azerbaijan, working in web security.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
@@ -236,14 +236,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="CONSULTATION" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">CONSULTATION</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Consultation for Startups, Data based projects, Events, Technical SEO, IT Based think
                 </p>
               </div>
 
