--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-app.svg" alt="PUBLIC SPEAKING" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">PUBLIC SPEAKING</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Conferences, Events, TV and radio interview
                 </p>
               </div>
 
