--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="CONSULTATION" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Email Security" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">CONSULTATION</h4>
+                <h4 class="h4 service-item-title">Email Security</h4>
 
                 <p class="service-item-text">
-                  Consultation for Startups, Data based projects, Events, Technical SEO, IT Based think
+                  Consultation for Startups and company
                 </p>
               </div>
 
