--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="PUBLIC SPEAKING" width="40">
+                <img src="./assets/images/icon-app.svg" alt="OSINT" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">PUBLIC SPEAKING</h4>
+                <h4 class="h4 service-item-title"></h4>
 
                 <p class="service-item-text">
-                  Conferences, Events, TV and radio interview
+                  
                 </p>
               </div>
 
@@ -268,14 +268,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-photo.svg" alt="pucblic speaking" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">PUBLIC SPEAKING</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                 Conferences, Events, TV and radio interview
                 </p>
               </div>
 
