--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="./assets/images/browser.svg
                 " alt="design icon" width="40">
               </div>
 
