--- a/index.html
+++ b/index.html
@@ -257,7 +257,9 @@
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title"></h4>
-
+ <p class="service-item-text">
+                 Conferences, Events, TV and radio interview
+                </p>
                 <p class="service-item-text">
                   
                 </p>
