--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Email Security" width="40">
+                <img src="./assets/images/emai.png" alt="Email Security" width="40">
               </div>
 
               <div class="service-content-box">
@@ -255,7 +255,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title"></h4>
+                <h4 class="h4 service-item-title">OSINT</h4>
  <p class="service-item-text">
                  Conferences, Events, TV and radio interview
                 </p>
