--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="OSINT" width="40">
+                <img src="./assets/images/searching.png" alt="OSINT" width="40">
               </div>
 
               <div class="service-content-box">
