--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/emai.png" alt="Email Security" width="40">
+                <img src="./assets/images/email.png" alt="Email Security" width="40">
               </div>
 
               <div class="service-content-box">
