--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <h4 class="h4 service-item-title">Web Security</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Consultation for Startups and company
                 </p>
               </div>
 
@@ -257,7 +257,7 @@
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">OSINT</h4>
  <p class="service-item-text">
-                 Conferences, Events, TV and radio interview
+                  Consultation for Startups and company
                 </p>
                 <p class="service-item-text">
                   
