--- a/index.html
+++ b/index.html
@@ -269,14 +269,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="pucblic speaking" width="40">
+                <img src="./assets/images/icon-speech.png" alt="pucblic speaking" width="40">
               </div>
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">PUBLIC SPEAKING</h4>
 
                 <p class="service-item-text">
-                 Conferences, Events, TV and radio interview
+                 Conferences, Podcasts, TV and radio interview
                 </p>
               </div>
 
