--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </a>
           </li>
          <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://wa.link/tzx5fk" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
