--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-speech.png" alt="pucblic speaking" width="40">
+                <img src="./assets/images/speech.png" alt="pucblic speaking" width="40">
               </div>
 
               <div class="service-content-box">
