--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">PUBLIC SPEAKING</h4>
+                <h4 class="h4 service-item-title">Public Speaking</h4>
 
                 <p class="service-item-text">
                  Conferences, Podcasts, TV and radio interview
